--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,8 @@
         "default_title": "tab-killer",
         "default_popup": "popup.html"
     },
-
+    "background": {
+        "service_worker": "background.js"
+    },
     "permissions": ["tabs"]
 }
