--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,5 +11,5 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["tabs"]
+  "permissions": ["tabs", "storage"]
 }
