--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,5 +11,11 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["tabs", "storage"]
+  "permissions": ["tabs", "storage"],
+
+  "icons": {
+    "16": "images/16icon.png",
+    "48": "images/48icon.png",
+    "128": "images/128icon.png"
+  }
 }
