--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "js/background.js"
   },
   "permissions": ["tabs", "storage"],
 
