--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "eslint": "^8.1.0",
+    "eslint-config-google": "^18.2.1",
     "eslint-config-prettier": "^8.3.0"
   }
 }
