--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "tab-killer",
-  "description": "Close all duplicate tabs.",
-  "version": "1.1.0",
+  "name": "__MSG_appName__",
+  "description": "__MSG_appDescription__",
+  "version": "1.2.0",
+  "default_locale": "en",
   "manifest_version": 3,
 
   "action": {
