--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "__MSG_appName__",
+  "name": "tab-killer",
   "description": "__MSG_appDescription__",
   "version": "1.2.0",
   "default_locale": "en",
