--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,8 +10,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "js/background.js",
-    "type": "module"
+    "service_worker": "js/background.js"
   },
   "permissions": ["tabs", "storage"],
 
