--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "eslint": "^8.1.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "jest": "^27.5.1"
   }
 }
